<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/causes_activity_help"
        android:textColor="@color/black" />

    <GridLayout
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        >
        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_column="0"
            android:layout_row="0"
            android:background="@color/red" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:textColor="@color/black"
            android:layout_row="0"
            android:layout_marginStart="10dp"
            android:text="@string/extreme_cause" />
        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_column="0"
            android:layout_row="1"
            android:background="@color/green" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:textColor="@color/black"
            android:layout_row="1"
            android:layout_marginStart="10dp"
            android:text="@string/children_cause" />
        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_column="0"
            android:layout_row="2"
            android:background="@color/pink" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:textColor="@color/black"
            android:layout_row="2"
            android:layout_marginStart="10dp"
            android:text="@string/female_cause" />
        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_column="0"
            android:layout_row="3"
            android:background="@color/purple" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:textColor="@color/black"
            android:layout_row="3"
            android:layout_marginStart="10dp"
            android:text="@string/elderly_cause" />

    </GridLayout>
</LinearLayout>