<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_width="match_parent"
    android:fillViewport="true">
    <include layout="@layout/app_bar"/>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:id="@+id/detail_title_view"
            android:text="@string/muscle_str"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/detail_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_title_view"
            android:contentDescription="@string/detail_image" />

        <TextView
            android:id="@+id/primary_symptoms_title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/primary_symptoms_str"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_image_view" />

        <ListView
            android:id="@+id/primary_symptoms_list"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:paddingVertical="5dp"

            android:divider="@null"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/primary_symptoms_title_view"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/secondary_symptoms_title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"

            android:text="@string/secondary_symptoms_str"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/primary_symptoms_list" />

        <ListView
            android:id="@+id/secondary_symptoms_list"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:paddingVertical="5dp"

            android:divider="@null"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/secondary_symptoms_title_view" />



    </android.support.constraint.ConstraintLayout>
</ScrollView>